# src/routes/auth-routes.js
@@ -1,18 +1,8 @@
 const express = require("express");
 const passport = require("passport");
-const { verifyToken } = require("../middleware/auth");
-const { register, login, logout, getMe, googleCallback } = require("../controllers/authController");
+const { googleCallback } = require("../controllers/authController");
 
 const router = express.Router();
-
-// POST /api/auth/register
-router.post("/register", register);
-// POST /api/auth/login
-router.post("/login", login);
-// POST /api/auth/logout
-router.post("/logout", logout);
-// GET /api/auth/me
-router.get("/me", verifyToken, getMe);
 
 // Google oAuth
 router.get(
