# src/swagger/swagger.json
@@ -401,7 +401,7 @@
         }
       }
     },
-    "/api/auth/register": {
+    "/api/users/register": {
       "post": {
         "description": "",
         "parameters": [
@@ -440,7 +440,7 @@
         }
       }
     },
-    "/api/auth/login": {
+    "/api/users/login": {
       "post": {
         "description": "",
         "parameters": [
@@ -476,7 +476,7 @@
         }
       }
     },
-    "/api/auth/logout": {
+    "/api/users/logout": {
       "post": {
         "description": "",
         "responses": {
@@ -486,7 +486,7 @@
         }
       }
     },
-    "/api/auth/me": {
+    "/api/users/me": {
       "get": {
         "description": "",
         "responses": {
@@ -495,6 +495,76 @@
           },
           "401": {
             "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/api/users/{id}": {
+      "put": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "example": "any"
+                },
+                "email": {
+                  "example": "any"
+                },
+                "phone": {
+                  "example": "any"
+                },
+                "avatar": {
+                  "example": "any"
+                },
+                "shippingAddress": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      },
+      "delete": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
           },
           "404": {
             "description": "Not Found"
